Sent url to download_file

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>YouTube Music track to download:</h1>
     <form action="/download" method="post">
-        <input type="text" name="name" required>
+        <input type="text" name="url" required>
         <input type="submit" value="Download">
     </form>
 </body>
