--- a/templates/index.html
+++ b/templates/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Greeting Page</title>
+    <title>Download YouTube Music Track</title>
 </head>
 <body>
-    <h1>YouTube Music track to download:</h1>
+    <h1>Enter YouTube Music Track URL to Download:</h1>
     <form action="/download" method="post">
         <input type="text" name="url" required>
         <input type="submit" value="Download">
