Expand URL input field width

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Enter YouTube Music Track URL to Download:</h1>
     <form action="/download" method="post">
-        <input type="text" name="url" required>
+        <input type="text" name="url" required style="width: 80%;">
         <input type="submit" value="Download">
     </form>
 </body>
